--- a/src/Stylesheets/IndustryBar.css
+++ b/src/Stylesheets/IndustryBar.css
@@ -8,6 +8,7 @@
     gap:1%;
     border-radius: 5%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    align-items: center;
 }
 .title-industrybar{
     font-size: x-large;
@@ -18,3 +19,33 @@
     flex: 1;
 
 }
+.ind-sentiment-industryBar{
+  height:50px;
+  width:50px;
+
+}
+
+
+.price-industrybar {
+    display: flex;
+    flex: 0.8;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .price-actual-industryBar {
+    margin: 0;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  .variacion-industryBar {
+    margin: 0;
+    font-size: 16px;
+  }
+ 
