--- a/src/Stylesheets/MarketManager.css
+++ b/src/Stylesheets/MarketManager.css
@@ -12,6 +12,7 @@
     padding: 10px;
     background-color: #f8f8f8;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    height: 15%;
   }
   
   .chart-container {
